// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zh-template-compiler 包含多个子组件 1`] = `
Object {
  "attrs": Array [],
  "children": Array [
    Object {
      "attrs": Array [],
      "children": Array [],
      "tag": "第一个子组件",
      "type": 1,
    },
    Object {
      "attrs": Array [],
      "children": Array [],
      "tag": "第二个子组件",
      "type": 1,
    },
  ],
  "tag": "组件",
  "type": 1,
}
`;

exports[`zh-template-compiler 包含多层子组件 1`] = `
Object {
  "attrs": Array [],
  "children": Array [
    Object {
      "attrs": Array [],
      "children": Array [
        Object {
          "attrs": Array [],
          "children": Array [],
          "tag": "孙子组件",
          "type": 1,
        },
      ],
      "tag": "子组件",
      "type": 1,
    },
  ],
  "tag": "组件",
  "type": 1,
}
`;

exports[`zh-template-compiler 包含子组件 1`] = `
Object {
  "attrs": Array [],
  "children": Array [
    Object {
      "attrs": Array [],
      "children": Array [],
      "tag": "子组件",
      "type": 1,
    },
  ],
  "tag": "组件",
  "type": 1,
}
`;

exports[`zh-template-compiler 复杂的属性值 1`] = `
Object {
  "attrs": Array [
    Object {
      "isBind": false,
      "name": "选中值",
      "value": "番茄",
    },
    Object {
      "isBind": true,
      "name": "数据",
      "value": Object {
        "list": Array [
          Object {
            "id": "番茄",
            "名称": "🍅",
          },
          Object {
            "id": "香蕉",
            "名称": "🍌",
          },
        ],
        "total": 2,
      },
    },
  ],
  "children": Array [
    Object {
      "attrs": Array [],
      "children": Array [],
      "tag": "子组件",
      "type": 1,
    },
  ],
  "tag": "下拉框",
  "type": 1,
}
`;
